# soltana

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .stylelintrc.json  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/rules/: architecture-and-companion.mdc  tooling.mdc
.github/: FUNDING.yml
apps/web/: .dev.vars.example  drizzle.config.ts  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/src/: client.tsx
apps/web/src/routes/: __root.tsx  index.tsx  sign-in.tsx  sign-up.tsx  (+1 more)
docs/: SCOPE.md  architecture.md  auth.md  companion-ui.md  companion.md  context-memory.md  data-model.md  evaluation.md  index.md  ontology.md  pipeline.md  reader.md  scrapers.md  search.md  soltana-ui.md  study-plans.md  teach.md  timeline.md
pipeline/: pyproject.toml
pipeline/src/soltana_pipeline/: __init__.py  cli.py  config.py  models.py
pipeline/src/soltana_pipeline/lib/: cache.py  db.py  refs.py
pipeline/src/soltana_pipeline/output/: d1.py
pipeline/src/soltana_pipeline/sources/: __init__.py  base.py
pipeline/src/soltana_pipeline/sources/cfm/: __init__.py
pipeline/src/soltana_pipeline/sources/ebible/: __init__.py
pipeline/src/soltana_pipeline/sources/openbible/: __init__.py
pipeline/src/soltana_pipeline/sources/oshb/: __init__.py
pipeline/src/soltana_pipeline/sources/sefaria/: __init__.py
pipeline/src/soltana_pipeline/sources/strongs/: __init__.py
pipeline/src/soltana_pipeline/sources/tanzil/: __init__.py
scrapers/: package.json  tsconfig.json
scrapers/src/cfm/: scrape.ts
(+42 files in other folders)
