[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soltana_pipeline"]

[project]
name = "soltana-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "polars",
    "orjson",
    "lxml",
    "pydantic>=2",
    "httpx",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ruff",
    "pytest",
]

[project.scripts]
soltana-pipeline = "soltana_pipeline.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
